--- a/Axler/preamble.tex
+++ b/Axler/preamble.tex
@@ -198,6 +198,8 @@
 \newcommand{\spanof}{\operatorname{span}}
 \newcommand{\Lin}[1]{\mathcal{L} \left( #1 \right)}
 \newcommand{\Polys}[2]{\mathcal{P}_{#2}(#1)}
+\newcommand{\PolysAll}[1]{\mathcal{P}(#1)}
+\newcommand{\Matof}[1]{\mathcal{M}(#1)}
 
 %%% Probability Theory
 % Operators
