--- a/Axler/Chapter-5.tex
+++ b/Axler/Chapter-5.tex
@@ -123,4 +123,8 @@ Note that any nonzero scalar multiple of an eigenvector is itself an eigenvector
     \[ T^m = \underbrace{T \dots T}_{m \text{ times}} \]
 \end{definition}
 
+Unfortunately, I didn't have enough time to take notes for the rest of the sections in Chapter 5.
+
+At some future point I'll go back and add them.
+
 \endinput
