Fixes (thanks Noah! :pleading_face:)

--- a/Axler/Chapter-3.tex
+++ b/Axler/Chapter-3.tex
@@ -719,7 +719,7 @@ Think of an isomorphism as a way to relabel vectors in a space.
 \end{theorem}
 
 \begin{definition} [The Induced Map over a Quotient Space]
-   Suppose $T \in \Lin{V, W}$. Define the \textbf{induced map} $\tilde{T} : V / (\null T) \to W$ by
+   Suppose $T \in \Lin{V, W}$. Define the \textbf{induced map} $\tilde{T} : V / (\Null T) \to W$ by
    \[ \tilde{T}(v + \Null T) = Tv \]
 \end{definition}
 
