--- a/Axler/Chapter-4.tex
+++ b/Axler/Chapter-4.tex
@@ -17,7 +17,7 @@
         \[ \overline{z} = \Re{z} - \Im{z}i \]
         \item The \textbf{absolute value} of a complex number $z$, denoted $\abs{z}$, is
         defined by:
-        \[ \abs{z} = \sqrt{\qty(\Re{z}) + \qty(\Re{z})} \]
+        \[ \abs{z} = \sqrt{\qty(\Re{z})^2 + \qty(\Im{z})^2 } \]
     \end{itemize}
 \end{definition}
 
